fixed bug that wouldn't allow symbols/text to overlap on map, fixed public popups display bug, cleaned up dashboard js

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,14 +41,4 @@ p {
     height:400px;
     width:100%;
   }
-  #pac-input {
-    background-color: #fff;
-    font-family: Roboto;
-    font-size: 10px;
-    font-weight: 300;
-    margin-left: 3px;
-    padding: 0 2px 0 3px;
-    text-overflow: ellipsis;
-    width: 200px;
-  }
 }
